# CTF-Forge

./: .example.env  .gitignore  LICENSE  README.md  downloader.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
ctf_forge/: __init__.py  __main__.py  _sanitize.py  cli.py  config.py  ctfd.py  errors.py  templates.py  workspace.py
ctf_forge/default_templates/crypto/: solution.md  solve.py
ctf_forge/default_templates/default/: solution.md  solve.py
ctf_forge/default_templates/misc/: solution.md  solve.py
ctf_forge/default_templates/pwn/: solution.md  solve.py
ctf_forge/default_templates/rev/: solution.md  solve.py
ctf_forge/default_templates/web/: solution.md  solve.py
docs/superpowers/plans/: 2026-06-19-public-release.md
docs/superpowers/specs/: 2026-06-19-public-release-design.md
scripts/: build.sh
tests/: test_cli.py  test_config.py  test_ctfd.py  test_sanitize.py  test_templates.py  test_workspace.py
