[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctf-forge"
version = "0.2.0"
description = "Forge local challenge workspaces from CTFd instances."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Daksh Thapar" }]
keywords = ["ctf", "ctfd", "security", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.31,<3",
    "python-dotenv>=1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "responses>=0.25",
    "ruff>=0.5",
    "mypy>=1.10",
    "pyinstaller>=6",
    "types-requests",
]

[project.scripts]
ctf-forge = "ctf_forge.cli:main"

[tool.setuptools.packages.find]
include = ["ctf_forge*"]

[tool.setuptools.package-data]
ctf_forge = ["default_templates/**/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["ctf_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
